test/test-files/analyzer/functions/error-ext-dyn-arg/exception.out
Semantic error in : ./test-files/analyzer/functions/error-ext-dyn-arg/source.spice:1:26:
Unexpected dyn type: Dyn data type is not allowed as arg type for external functions

nt> exteralFunction(dyn, int);
                    ^^^